fdo#74215:Fix for empty imagedata in Number Pic bullet

1. While exporting through LO, it writes numPicBullet with imagedata of size 0,0.
2. Because of this image file of 0KB is added in media folder
3. While opening the document in MS-Office, it shows the image missing at the top
which is of 0 KB size.

Change-Id: I5f8f187fc4fe678dceb3f2b594de74a6b52cbe74